make redis optional

--- a/env.example
+++ b/env.example
@@ -1,5 +1,6 @@
 # Redis Configuration
 REDIS_URL=redis://localhost:6379/0
+REDIS_ENABLED=true
 
 # Database Configuration
 DATABASE_PATH=data/market_watch.db
