--- a/env.example
+++ b/env.example
@@ -11,7 +11,7 @@ API_HOST=0.0.0.0
 API_PORT=8000
 
 # Debug Mode
-DEBUG=true
+DEBUG=false
 
 # WebSocket Configuration
 WEBSOCKET_UPDATE_INTERVAL=0.5
