--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-fastapi
-pydantic
-uvicorn[standard]
-orjson
-pytz
-redis
-aiohttp
-python-dotenv
+fastapi==0.119.0
+pydantic==2.12.3
+uvicorn[standard]==0.38.0
+orjson==3.11.3
+pytz==2025.2
+redis==6.4.0
+aiohttp==3.13.1
+python-dotenv==1.1.1
