--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: redis:8.2.2-alpine
     container_name: stock-pulse-redis
     ports:
-      - "6379:6379"
+      - "6379:6379" # i think we can remove this line but for now we leave it
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
@@ -13,20 +13,22 @@ services:
       retries: 3
 
   # Stock Pulse API service
-  api:
+  stock-pulse:
     build: .
     container_name: stock-pulse-api
     ports:
-      - "8000:8000"
+      - "${API_PORT:-8000}:8000"
     volumes:
-      - app_data:/app/data  # Persist SQLite database
+      - app_data:${DATA_DIR:-/app/data}  # Persist SQLite database
     environment:
-      - REDIS_URL=redis://redis:6379/0
-      - REDIS_ENABLED=true
-      - DATABASE_PATH=/app/data/market_watch.db
-      - API_HOST=0.0.0.0
-      - API_PORT=8000
-      - DEBUG=true
+      - REDIS_URL=${REDIS_URL:-redis://redis:6379/0}
+      - REDIS_ENABLED=${REDIS_ENABLED:-true}
+      - REDIS_TTL_SECONDS=${REDIS_TTL_SECONDS:-120}
+      - DATABASE_PATH=${DATABASE_PATH:-/app/data/market_watch.db}
+      - API_HOST=${API_HOST:-0.0.0.0}
+      - API_PORT=${API_PORT:-8000}
+      - DEBUG=${DEBUG:-true}
+      - WEBSOCKET_UPDATE_INTERVAL=${WEBSOCKET_UPDATE_INTERVAL:-0.5}
     depends_on:
       redis:
         condition: service_healthy
