--- a/env.example
+++ b/env.example
@@ -4,7 +4,7 @@ REDIS_ENABLED=true
 REDIS_TTL_SECONDS=120
 
 # Database Configuration
-DATABASE_PATH=data/market_watch.db
+DATA_DIR=/app/data
 
 # API Configuration
 API_HOST=0.0.0.0
