--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,10 @@ services:
 
   # Stock Pulse API service
   stock-pulse:
-    build: .
+    build:
+      context: .
+      args:
+        DATA_DIR: ${DATA_DIR:-/app/data}
     container_name: stock-pulse-api
     ports:
       - "${API_PORT:-8000}:8000"
@@ -24,7 +27,7 @@ services:
       - REDIS_URL=${REDIS_URL:-redis://redis:6379/0}
       - REDIS_ENABLED=${REDIS_ENABLED:-true}
       - REDIS_TTL_SECONDS=${REDIS_TTL_SECONDS:-120}
-      - DATABASE_PATH=${DATABASE_PATH:-/app/data/market_watch.db}
+      - DATA_DIR=${DATA_DIR:-/app/data}
       - API_HOST=${API_HOST:-0.0.0.0}
       - API_PORT=${API_PORT:-8000}
       - DEBUG=${DEBUG:-true}
