--- a/env.example
+++ b/env.example
@@ -1,5 +1,5 @@
 # Redis Configuration
-REDIS_URL=redis://localhost:6379/0
+REDIS_URL=redis://redis:6379/0
 REDIS_ENABLED=true
 REDIS_TTL_SECONDS=120
 
