make the data dir in docker file consistant (to be in app/datadir

--- a/env.example
+++ b/env.example
@@ -4,7 +4,7 @@ REDIS_ENABLED=true
 REDIS_TTL_SECONDS=120
 
 # Database Configuration
-DATA_DIR=/app/data
+DATA_DIR=data
 
 # API Configuration
 API_HOST=0.0.0.0
