--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,17 +17,17 @@ services:
     build:
       context: .
       args:
-        DATA_DIR: ${DATA_DIR:-/app/data}
+        DATA_DIR: /app/data
     container_name: stock-pulse-api
     ports:
       - "${API_PORT:-8000}:8000"
     volumes:
-      - app_data:${DATA_DIR:-/app/data}  # Persist SQLite database
+      - app_data:/app/data  # Persist SQLite database
     environment:
-      - REDIS_URL=${REDIS_URL:-redis://redis:6379/0}
+      - REDIS_URL=redis://redis:6379/0
+      - DATA_DIR=/app/data
       - REDIS_ENABLED=${REDIS_ENABLED:-true}
       - REDIS_TTL_SECONDS=${REDIS_TTL_SECONDS:-120}
-      - DATA_DIR=${DATA_DIR:-/app/data}
       - API_HOST=${API_HOST:-0.0.0.0}
       - API_PORT=${API_PORT:-8000}
       - DEBUG=${DEBUG:-true}
