--- a/env.example
+++ b/env.example
@@ -1,5 +1,5 @@
 # Redis Configuration
-REDIS_URL=redis://redis:6379/0
+REDIS_URL=redis://localhost:6379/0
 REDIS_ENABLED=true
 REDIS_TTL_SECONDS=120
 
@@ -11,7 +11,7 @@ API_HOST=0.0.0.0
 API_PORT=8000
 
 # Debug Mode
-DEBUG=false
+DEBUG=true
 
 # WebSocket Configuration
 WEBSOCKET_UPDATE_INTERVAL=0.5
